--- a/falafel.html
+++ b/falafel.html
@@ -1,125 +1,63 @@
 <?xml version="1.0" encoding="us-ascii"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta http-equiv="Content-Type"
-              content="text/html; charset=us-ascii" />
-        <meta name="author"
-              content="Sami Kerola" />
-        <meta name="classification"
-              content="personal home page" />
-        <meta name="contact_addr"
-              content="kerolasa@iki.fi" />
-        <meta name="copyright"
-              content="Copyright Sami Kerola" />
-        <meta name="description"
-              content="falafel resepti" />
-        <meta name="distribution"
-              content="global" />
-        <meta name="abstract"
-              content="falafel resepti" />
-        <meta name="keywords"
-              content="resepti, falafel" />
-        <meta name="language"
-              content="fi" />
-        <meta name="owner"
-              content="Sami Kerola" />
-        <meta name="rating"
-              content="general" />
-        <meta name="revisit-after"
-              content="15" />
-        <meta name="robots"
-              content="index, follow" />
-        <link type="text/css"
-              rel="stylesheet"
-              href=
-              "kerolasa.css" />
-              
-        <title>
-            Samin Falafel
-        </title>
-    </head>
-    <body>
-        <h2>
-	    Samin Falafel
-        </h2>
-	<p>
-	    If you find the following hard to understand try
-	    <a href="falafel-en.html">English version</a> instead.
-        <p>
-            Halkaistuja kik-herneit&#228; 4 dl. Liota pari tuntia.
-        </p>
-        <p>
-            Siivil&#246;i vesi ja t&#228;r&#228;yt&#228;
-            kik-herneet sauvasekottimella t&#246;hk&#228;ksi.
-            Lis&#228;&#228; seuraavia aineksia sopivasti.
-        </p>
-        <ul>
-            <li>V&#228;hint&#228;&#228;n kaksi sipulia
-            </li>
-            <li>Valkosipulia niin ett&#228; tuntuu
-            </li>
-            <li>Tuorepersiljapuska silppuna
-            </li>
-            <li>Suolaa
-            </li>
-            <li>Ruokasoodaa ruokalusikallinen tai pari
-            </li>
-            <li>Jeeraa l&#228;j&#228;
-            </li>
-            <li>Chilijauhetta tai
-            chili&#246;ljyt&#246;hk&#228;&#228; reippaasti
-            </li>
-            <li>Luraus vett&#228;
-            </li>
-            <li>Tahinitahnaa
-            </li>
-        </ul>
-        <p>
-            Tavoitteena on saada taikinaa, mik&#228; on kosteaa. Ei
-            m&#228;rk&#228;&#228; eik&#228; liimaista. Mik&#228;li
-            kosteutta on liikaa lis&#228;&#228;
-        </p>
-        <ul>
-            <li>Vehn&#228;jauhoja
-            </li>
-        </ul>
-        <p>
-            L&#228;mmit&#228; &#246;ljy aika kuumalla levyll&#228;,
-            t&#228;ysill&#228; saattaa olla liioittelua. Pallerot
-            on helpointa tehd&#228; kahdella lusikalla. Opit
-            tekem&#228;&#228;n oikean kokoisen palleron noin
-            kahdesta viiteen yrityksen j&#228;lkeen.
-            ENSIMM&#196;INEN pallero on TESTIPALLERO, jolla
-            kokeillaan taikinan kosteus. Mik&#228;li TAIKINA on
-            liian M&#196;RK&#196;&#196; pallero HAJOAA.
-            T&#228;llaisessa tapauksessa lis&#228;&#228;
-            vehn&#228;jauhoja.
-        </p>
-        <p>
-            Palleroiden paistamiseen kannattaa otta toiset kaksi
-            lusikkaa. Koska paistoaika on aika lyhyt suosittelen
-            yhteisty&#246;llistetty&#228; paistoketjua. Yks duunaa
-            palloja toinen paistaa niit&#228;.
-        </p>
-        <p>
-            Boonusosio. Falafel on kasvispallero.
-            K&#228;yt&#228;nn&#246;ss&#228; voit
-            k&#228;ytt&#228;&#228; melkeinp&#228; mit&#228; tahansa
-            kasviksia, kuten perunaa, porkkanaa, lanttua, maissia,
-            parsaa, pinaattia, raparperia, tilli&#228; jne.
-            Rajoitus on oikeastaan se, ettei hyvin m&#228;rki&#228;
-            juttuja, kuten melooni, kannata k&#228;ytt&#228;&#228;
-            koska silloin palleroiden hajoaminen tulee ongelmaksi.
-            My&#246;s erin&#228;isi&#228; mausteita, kuten
-            kurkumaa, pippureita tai yrttej&#228; voi
-            k&#228;ytt&#228;&#228; melko vapaasti. Periaate on se,
-            ett&#228; jos taikina on hyv&#228;&#228; niin falafel
-            on hyv&#228;&#228;. Falafelih&#228;n ei
-            sis&#228;lt&#228; juurikaan paistu eli
-            k&#228;yt&#228;nn&#246;ss&#228; t&#228;m&#228;
-            ruokalaji on taikinan sy&#246;nti&#228;.
-        </p>
-    </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="author" content="Sami Kerola">
+<meta name="classification" content="personal home page">
+<meta name="contact_addr" content="kerolasa@iki.fi">
+<meta name="copyright" content="Copyright Sami Kerola">
+<meta name="description" content="falafel resepti">
+<meta name="distribution" content="global">
+<meta name="abstract" content="falafel resepti">
+<meta name="keywords" content="resepti, falafel">
+<meta name="language" content="fi">
+<meta name="owner" content="Sami Kerola">
+<meta name="rating" content="general">
+<meta name="revisit-after" content="15">
+<meta name="robots" content="index, follow">
+<link type="text/css" rel="stylesheet" href="kerolasa.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Samin Falafel</title>
+</head>
+<body>
+<h2>Samin Falafel</h2>
+<p>If you find the following hard to understand try <a href=
+"falafel-en.html">English version</a> instead.</p>
+<p>Halkaistuja kik-herneitä 4 dl. Liota pari tuntia.</p>
+<p>Siivilöi vesi ja täräytä kik-herneet sauvasekottimella töhkäksi. Lisää
+seuraavia aineksia sopivasti.</p>
+<ul>
+<li>Vähintään kaksi sipulia</li>
+<li>Valkosipulia niin että tuntuu</li>
+<li>Tuorepersiljapuska silppuna</li>
+<li>Suolaa</li>
+<li>Ruokasoodaa ruokalusikallinen tai pari</li>
+<li>Jeeraa läjä</li>
+<li>Chilijauhetta tai chiliöljytöhkää reippaasti</li>
+<li>Luraus vettä</li>
+<li>Tahinitahnaa</li>
+</ul>
+<p>Tavoitteena on saada taikinaa, mikä on kosteaa. Ei märkää eikä liimaista.
+Mikäli kosteutta on liikaa lisää</p>
+<ul>
+<li>Vehnäjauhoja</li>
+</ul>
+<p>Lämmitä öljy aika kuumalla levyllä, täysillä saattaa olla liioittelua.
+Pallerot on helpointa tehdä kahdella lusikalla. Opit tekemään oikean kokoisen
+palleron noin kahdesta viiteen yrityksen jälkeen. ENSIMMÄINEN pallero on
+TESTIPALLERO, jolla kokeillaan taikinan kosteus. Mikäli TAIKINA on liian MÄRKÄÄ
+pallero HAJOAA. Tällaisessa tapauksessa lisää vehnäjauhoja.</p>
+<p>Palleroiden paistamiseen kannattaa otta toiset kaksi lusikkaa. Koska
+paistoaika on aika lyhyt suosittelen yhteistyöllistettyä paistoketjua. Yks
+duunaa palloja toinen paistaa niitä.</p>
+<p>Boonusosio. Falafel on kasvispallero. Käytännössä voit käyttää melkeinpä
+mitä tahansa kasviksia, kuten perunaa, porkkanaa, lanttua, maissia, parsaa,
+pinaattia, raparperia, tilliä jne. Rajoitus on oikeastaan se, ettei hyvin
+märkiä juttuja, kuten melooni, kannata käyttää koska silloin palleroiden
+hajoaminen tulee ongelmaksi. Myös erinäisiä mausteita, kuten kurkumaa,
+pippureita tai yrttejä voi käyttää melko vapaasti. Periaate on se, että jos
+taikina on hyvää niin falafel on hyvää. Falafelihän ei sisältä juurikaan paistu
+eli käytännössä tämä ruokalaji on taikinan syöntiä.</p>
+</body>
 </html>
