--- a/matti.html
+++ b/matti.html
@@ -1,127 +1,68 @@
-<?xml version="1.0"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta http-equiv="Content-Type"
-        content="text/html; charset=iso-8859-1" />
-
-        <meta name="author" content="Sami Kerola" />
-
-        <meta name="classification" content="personal home page" />
-
-        <meta name="contact_addr" content="kerolasa@iki.fi" />
-
-        <meta name="copyright" content="Copyright (C)2000 Sami Kerola" />
-
-        <meta name="description" content="El&#228;m&#228; on laiffia" />
-
-        <meta name="distribution" content="global" />
-
-        <meta name="abstract" content="El&#228;m&#228; on laiffia" />
-
-        <meta name="keywords"
-        content="El&#228;m&#228;, on, laiffia, matti, nyk&#228;nen" />
-
-        <meta name="language" content="fi" />
-
-        <meta name="owner" content="Sami Kerola" />
-
-        <meta name="rating" content="general" />
-
-        <meta name="revisit-after" content="15" />
-
-        <meta name="robots" content="index, follow" />
-
-        <link type="text/css" rel="stylesheet"
-        href="kerolasa.css" />
-
-        <title>Matti Nyk&#228;nen - El&#228;m&#228; on laiffia</title>
-
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="author" content="Sami Kerola">
+<meta name="classification" content="personal home page">
+<meta name="contact_addr" content="kerolasa@iki.fi">
+<meta name="copyright" content="Copyright (C)2000 Sami Kerola">
+<meta name="description" content="Elämä on laiffia">
+<meta name="distribution" content="global">
+<meta name="abstract" content="Elämä on laiffia">
+<meta name="keywords" content="Elämä, on, laiffia, matti, nykänen">
+<meta name="language" content="fi">
+<meta name="owner" content="Sami Kerola">
+<meta name="rating" content="general">
+<meta name="revisit-after" content="15">
+<meta name="robots" content="index, follow">
+<link type="text/css" rel="stylesheet" href="kerolasa.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Matti Nykänen - Elämä on laiffia</title>
 <style xml:space="preserve" type="text/css">
 BODY {
    max-width: 700px;
 }
-
 </style>
-    </head>
-
-    <body>
-        <h3>Matti Nyk&#228;nen - El&#228;m&#228; on laiffia</h3>
-
-        <p>Min&#228; ja yst&#228;v&#228;ni Tomi Kiilakoski mietimme
-        er&#228;&#228;n m&#246;kkireissun aikana er&#228;&#228;n
-        siideripullon etiketti&#228;. Siin&#228; oli Matti Nyk&#228;sen
-        naama ja teksti &quot;El&#228;m&#228; on laiffia&quot;. Harvahan
-        meist&#228; on sellainen ajattelija ja suurmies kuin Matti
-        Nyk&#228;nen, joten tekstill&#228; t&#228;ytyy olla jokin
-        merkitys mit&#228; ei tule heti miettineeksi. Pohtiessamme
-        lauseen merkityst&#228; saimme nelj&#228; eri selityst&#228;
-        aikaan.</p>
-
-        <p>
-        <i>Holistinen n&#228;kemys.</i>
-
-        El&#228;m&#228; on laiffia. Kaikki el&#228;m&#228; on laiffia.
-        Itse asiassa vasta kaikkien el&#228;mien summa on laiffi, johon
-        vertaamme omaa el&#228;m&#228;&#228;mme. Juuri minun tai sinun
-        el&#228;m&#228; on osa maailman el&#228;m&#228;&#228;, jota
-        laiffi on. Juuri minun tai sinun el&#228;m&#228; on niin
-        mit&#228;t&#246;nt&#228; ja v&#228;h&#228;p&#228;t&#246;ist&#228;
-        kuin se on kaiken muun el&#228;v&#228;n rinnalla, mutta silti
-        ilman minua tai sinua maailman laiffista puuttuisi jotain.</p>
-
-        <p>
-        <i>Laiffi on el&#228;m&#228;n atribuutti.</i>
-
-        Pallo voi olla sininen. Sinisyys on t&#228;ll&#246;in pallon
-        atribuutti. Eiv&#228;th&#228;n kaikki pallot ole sinisi&#228;,
-        aivan kuin kaikkien el&#228;m&#228; ei ole laiffia.
-        T&#228;ll&#246;in laiffi on jotain joka
-        m&#228;&#228;ritt&#228;&#228; el&#228;m&#228;n laatua tai tapaa
-        olla. Laiffi kuvaa el&#228;m&#228;&#228; samalla tavalla kuin
-        sinisyys palloa.</p>
-
-        <p>
-        <i>El&#228;m&#228; on laiffia kuten se sanotaan.</i>
-
-        Juuri sellainen el&#228;m&#228; on laiffia, jota voimme laiffiksi
-        kutsua. P&#228;&#228;st&#228;ksemme yksimielisyyteen siit&#228;
-        mit&#228; tarkoitamme el&#228;m&#228;ll&#228; tai laiffilla
-        meid&#228;n pit&#228;&#228; jutella muiden ihmisten kanssa.
-        Juttelun tarkoitus on selvitt&#228;&#228; miten ihmiset
-        k&#228;ytt&#228;v&#228;t sanoja el&#228;m&#228; ja laiffia ja
-        t&#228;ll&#246;in tied&#228;mme mit&#228; he tarkoittavat
-        n&#228;ill&#228; sanoilla. T&#228;m&#228; on n&#228;iden sanojen
-        syvin olemus.</p>
-
-        <p>
-        <i>El&#228;m&#228; on. Laiffi on. El&#228;m&#228; on ja laiffi
-        on.</i>
-
-        El&#228;m&#228; on olemista t&#228;&#228;ll&#228;
-        maailmankaikkeudessa n&#228;iss&#228; sanoissa teoissa ja
-        tarkoituksissa. My&#246;s laiffi on. N&#228;iden kahden olemassa
-        oleminen sitoutuu toistensa olemassa olemiseen kanssa olemisen
-        kautta. Voimme sanoa, ett&#228; kun el&#228;m&#228;n ja laiffin
-        eksistenssi kohtaa toisensa el&#228;m&#228; on laiffia.</p>
-
-        <p>Matti Nyk&#228;nen ei tullut kertoneeksi mit&#228; tarkoitti
-        sanoillaan. Tomin kanssa tulimme siihen loppu tulokseen,
-        ett&#228; p&#228;&#228;st&#228;ksemme selvyyteen mit&#228; Matti
-        tarkoitti meid&#228;n t&#228;ytyy kysy&#228; h&#228;nelt&#228;
-        itselt&#228;&#228;n mik&#228; n&#228;ist&#228; vaihtoehdoista oli
-        h&#228;nen mieless&#228; sanoessaan el&#228;m&#228; on laiffia.
-        Ja onhan mahdollista, ett&#228; Matin mieless&#228; oli jotain
-        aivan muuta.</p>
-
-        <p>&#169; Sami Kerola ja Tomi Kiilakoski. Saa levitell&#228;,
-        jaella, kopioida ja sit&#228; rataa mutta &#228;l&#228; ny
-        omaksesi v&#228;it&#228; n&#228;it&#228; turinoita.</p>
-
-        <p>Ps Luethan 
-        <a class="out" href="http://www.mattinykanen.net/thoughts.html">
-        filosofi Matin muita ajatuksia el&#228;m&#228;st&#228;.</a>
-        </p>
-
-    </body>
+</head>
+<body>
+<h3>Matti Nykänen - Elämä on laiffia</h3>
+<p>Minä ja ystäväni Tomi Kiilakoski mietimme erään mökkireissun aikana erään
+siideripullon etikettiä. Siinä oli Matti Nykäsen naama ja teksti "Elämä on
+laiffia". Harvahan meistä on sellainen ajattelija ja suurmies kuin Matti
+Nykänen, joten tekstillä täytyy olla jokin merkitys mitä ei tule heti
+miettineeksi. Pohtiessamme lauseen merkitystä saimme neljä eri selitystä
+aikaan.</p>
+<p><i>Holistinen näkemys.</i> Elämä on laiffia. Kaikki elämä on laiffia. Itse
+asiassa vasta kaikkien elämien summa on laiffi, johon vertaamme omaa elämäämme.
+Juuri minun tai sinun elämä on osa maailman elämää, jota laiffi on. Juuri minun
+tai sinun elämä on niin mitätöntä ja vähäpätöistä kuin se on kaiken muun elävän
+rinnalla, mutta silti ilman minua tai sinua maailman laiffista puuttuisi
+jotain.</p>
+<p><i>Laiffi on elämän atribuutti.</i> Pallo voi olla sininen. Sinisyys on
+tällöin pallon atribuutti. Eiväthän kaikki pallot ole sinisiä, aivan kuin
+kaikkien elämä ei ole laiffia. Tällöin laiffi on jotain joka määrittää elämän
+laatua tai tapaa olla. Laiffi kuvaa elämää samalla tavalla kuin sinisyys
+palloa.</p>
+<p><i>Elämä on laiffia kuten se sanotaan.</i> Juuri sellainen elämä on laiffia,
+jota voimme laiffiksi kutsua. Päästäksemme yksimielisyyteen siitä mitä
+tarkoitamme elämällä tai laiffilla meidän pitää jutella muiden ihmisten kanssa.
+Juttelun tarkoitus on selvittää miten ihmiset käyttävät sanoja elämä ja laiffia
+ja tällöin tiedämme mitä he tarkoittavat näillä sanoilla. Tämä on näiden
+sanojen syvin olemus.</p>
+<p><i>Elämä on. Laiffi on. Elämä on ja laiffi on.</i> Elämä on olemista täällä
+maailmankaikkeudessa näissä sanoissa teoissa ja tarkoituksissa. Myös laiffi on.
+Näiden kahden olemassa oleminen sitoutuu toistensa olemassa olemiseen kanssa
+olemisen kautta. Voimme sanoa, että kun elämän ja laiffin eksistenssi kohtaa
+toisensa elämä on laiffia.</p>
+<p>Matti Nykänen ei tullut kertoneeksi mitä tarkoitti sanoillaan. Tomin kanssa
+tulimme siihen loppu tulokseen, että päästäksemme selvyyteen mitä Matti
+tarkoitti meidän täytyy kysyä häneltä itseltään mikä näistä vaihtoehdoista oli
+hänen mielessä sanoessaan elämä on laiffia. Ja onhan mahdollista, että Matin
+mielessä oli jotain aivan muuta.</p>
+<p>© Sami Kerola ja Tomi Kiilakoski. Saa levitellä, jaella, kopioida ja sitä
+rataa mutta älä ny omaksesi väitä näitä turinoita.</p>
+<p>Ps Luethan
+<a class="out" href="http://www.mattinykanen.net/thoughts.html">filosofi
+Matin muita ajatuksia elämästä.</a></p>
+</body>
 </html>
-
