--- a/tea.html
+++ b/tea.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="author" content="Sami Kerola" />
-<meta name="classification" content="personal home page" />
-<meta name="contact_addr" content="kerolasa@iki.fi" />
-<meta name="copyright" content="Copyright (C)2020 Sami Kerola" />
-<meta name="description" content="Tea tasting notes" />
-<meta name="distribution" content="global" />
-<meta name="language" content="en" />
-<meta name="owner" content="Sami Kerola" />
-<meta name="rating" content="general" />
-<meta name="revisit-after" content="15" />
-<meta name="robots" content="index, follow" />
-<link type="text/css" rel="stylesheet" href="kerolasa.css" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="Sami Kerola">
+<meta name="classification" content="personal home page">
+<meta name="contact_addr" content="kerolasa@iki.fi">
+<meta name="copyright" content="Copyright (C)2020 Sami Kerola">
+<meta name="description" content="Tea tasting notes">
+<meta name="distribution" content="global">
+<meta name="language" content="en">
+<meta name="owner" content="Sami Kerola">
+<meta name="rating" content="general">
+<meta name="revisit-after" content="15">
+<meta name="robots" content="index, follow">
+<link type="text/css" rel="stylesheet" href="kerolasa.css">
 <title>Sami's tea tasting notes</title>
 </head>
 <body>
@@ -51,7 +51,6 @@ with additional black tea, and that mix was more what I wanted. Fair to
 say that is unlikely what the producer of this tea thought ought to be
 done.</p>
 
-
 <h2>Java - <a
 href="https://www.carrefour.ke/mafken/en/root-maf-category//beverages/tea/loose-leaf-tea-bags/black-loose/java-gold-label-tea-loose-350g/p/81519">Java House Gold Label Loose Tea</a>
 (3)</h2>
@@ -73,7 +72,6 @@ If you leave the tea for ten minutes you will get the punch you need at
 early hours.  If I find this product again I will get another kilo without
 thinking twice.</p>
 
-
 <h2>Edinburgh Tea and Coffee Company -
 <a href="https://www.gretnagreen.com/edinburgh-tea-and-coffee-company-whisky-loose-tea-tin-p19491">Whisky Loose Tea Tin</a>
 (4)</h2>
@@ -81,7 +79,6 @@ thinking twice.</p>
 small, so I have drank the tea very sparingly.  Price is not great, but as I
 got this as a gift I can tolerate that.  Would I buy this again if I would
 see the product on near by shop?  I think I would, but not very often.</p>
-
 
 <h2>Whittard -
 <a href="https://www.whittard.co.uk/gifts/gift-collections/tea-discoveries/tea-discoveries-mango-bergamot-tea-caddy-347898.html">Mango &amp; Bergamot</a>
@@ -126,7 +123,6 @@ in the purpose I had in mind.</p>
 leaves were crushed to so fine powder?  If you get this tea either use paper
 filters when making, or be ready to eat tea.</p>
 
-
 <h2>The Tea House -
 <a href="https://www.theteahouseltd.com/herbal/lemongrass-strawberry-infusion-tea/p-001005">Lemongrass and Strawberry</a>
 (4)</h2>
@@ -156,7 +152,6 @@ perfect cup.  Secondly the really fine grind means you don't need as many
 grams of this tea in strainer than some other tea.  I was happy with 8 grams
 per 1 litter, that is about 2 grams less than with leaves that are unbroken.
 Overdozing will make really strong and quite bitter tea.</p>
-
 
 <h2>Mariage Frères -
 <a href="https://www.mariagefreres.com/UK/2-the-sur-le-nil-T955.html">Thé Sur Le Nil</a>
