--- a/thaimaa.html
+++ b/thaimaa.html
@@ -1,191 +1,113 @@
 <?xml version="1.0"?>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-Type"
-        content="text/html; charset=iso-8859-1" />
-
-        <meta name="author" content="Sami Kerola" />
-
-        <meta name="classification" content="personal traveling" />
-
-        <meta name="contact_addr" content="kerolasa@iki.fi" />
-
-        <meta name="copyright" content="Copyright Sami Kerola" />
-
-        <meta name="description" content="thaimaan matka 2002" />
-
-        <meta name="distribution" content="global" />
-
-        <meta name="abstract" content="thaimaan matka 2002" />
-
-        <meta name="keywords"
-        content="sami, kerola, thaimaa, matkustamine" />
-
-        <meta name="language" content="fi" />
-
-        <meta name="owner" content="Sami Kerola" />
-
-        <meta name="rating" content="general" />
-
-        <meta name="revisit-after" content="150" />
-
-        <meta name="robots" content="index, follow" />
-
-        <link type="text/css" rel="stylesheet"
-        href="kerolasa.css" />
-
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="author" content="Sami Kerola">
+<meta name="classification" content="personal traveling">
+<meta name="contact_addr" content="kerolasa@iki.fi">
+<meta name="copyright" content="Copyright Sami Kerola">
+<meta name="description" content="thaimaan matka 2002">
+<meta name="distribution" content="global">
+<meta name="abstract" content="thaimaan matka 2002">
+<meta name="keywords" content="sami, kerola, thaimaa, matkustamine">
+<meta name="language" content="fi">
+<meta name="owner" content="Sami Kerola">
+<meta name="rating" content="general">
+<meta name="revisit-after" content="150">
+<meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link type="text/css" rel="stylesheet" href="kerolasa.css">
 <style xml:space="preserve" type="text/css">
 BODY {
    margin : 10px; 
    max-width: 700px; 
 }
 </style>
-
-        <title>Thaimaan matka</title>
-    </head>
-
-    <body>
-        <p>---------- Forwarded message ---------- 
-        <br />
-
-        Date: Mon, 16 Sep 2002 14:52:22 +0300 (EEST) 
-        <br />
-
-        From: Sami Kerola &lt;sami.kerola@sonera.com&gt; 
-        <br />
-
-        Subject: loma</p>
-
-        <p>Moro</p>
-
-        <p>V&#228;lt&#228;&#228;kseni vastailemasta samoihin kysymyksiin
-        uudestaan ja uudestaan t&#228;ss&#228;p&#228; hiemainen
-        tiivistelm&#228; siit&#228; mitenk&#246; lomani meni.</p>
-
-        <p>Haista Bangkok. Se on muuten sitten rumasti sanottu,
-        kyseisess&#228; kaupungissa on noin muutama miljoona
-        moottorikulkuneuvoa eiv&#228;tk&#228; paikalliset ole kuuleet
-        puhuttavan katalysaattorista. Eip&#228; silti kadunvarsilla
-        kalaapaistavat katukeitti&#246;ihmiset on viel&#228; turkasen
-        paljon t&#246;rke&#228;mm&#228;n hajuinen juttu kuin nuo
-        silmi&#228; ja kehkoja kirvelev&#228;t p&#246;risyttelij&#228;t.
-        Bangkokissa on toki hyvi&#228;kin puolia, kuten ilmastointi
-        kaikkialla. Tuo hyv&#228; puoli kuitenkin j&#228;&#228; sen
-        varjoo, ett&#228; samaisessa kaupungissa tuk tuk kuskit ja
-        massage massage, come for massage -ihmiset tyrkytt&#228;v&#228;t
-        palveluja t&#228;ysin v&#228;kisin.</p>
-
-        <p>Bangkokista piti p&#228;&#228;st&#228; pois ja suuntasin kohti
-        rannikkoa Pattajalle. Mik&#228;li olet 40-50 englantilainen tai
-        saksalainen mies ilman naisseuraa t&#228;m&#228; on juuri oikea
-        lomakohde sinulle. Min&#228; l&#246;ysin t&#228;st&#228;
-        kaupungista l&#228;hinn&#228; lava-autoja joiden tarkoitus oli
-        huijata rahaa turisteilta sek&#228; palvelua joka ei tajua
-        englannin kielest&#228; mit&#228;&#228;n muuta kuin maksamiseen
-        liittyv&#228;t sanat.</p>
-
-        <p>Pattaja on kama, siisp&#228; Rayongiin. T&#228;ss&#228;
-        kaupungissa ei ole hotelleja. Tai n&#228;in voi
-        p&#228;&#228;tell&#228; ainakin sill&#228; perusteella, ett&#228;
-        paikallinen lava-autokuski ajoi minut noin 25 kilometrin
-        p&#228;&#228;h&#228;n paikkaan jossa oli maaseutulomakohde.
-        Kanoja ja kukkoja, melkoinen viidakkokokemus kerrassaan. Rayong
-        on muuten siit&#228; haasteellinen kaupunki, ett&#228;
-        siell&#228; ei ole kuin muutama ravintola eik&#228; ilmeisesti
-        yht&#228;&#228;n ihmist&#228; joka osaisi puhua englantia
-        siedett&#228;v&#228;sti.</p>
-
-        <p>Maaseudun holiday resourt oli kyll&#228; kiva. Olkoonkin,
-        ett&#228; viereiselt&#228; tielt&#228; kulki maansiirto rekkoja.
-        Paikallisen tavan mukaisesti rekoilla ei tietystik&#228;&#228;n
-        ole &#228;&#228;nen vaimentimia. T&#228;m&#228; muistuitti
-        kovasti Pattajan hotellia mink&#228; vieress&#228; oli
-        rakennusty&#246;maa. Taitavat n&#228;m&#228; Thaimaalaiset
-        rakastaa turistien h&#228;irik&#246;inti&#228; y&#246;aikaan, tai
-        niin ainakin min&#228; luulen. Maaseutu idyllist&#228; oli
-        sellainen etu, ett&#228; ruokaileminen oli halpaa. Tietty haitta
-        puolena tuli noin 10 p&#228;iv&#228;&#228; kest&#228;v&#228;
-        ripuli.</p>
-
-        <p>Seuraavana p&#228;iv&#228;n&#228; Koh Sametin saarelle. Aluksi
-        n&#228;ytti tosi hyv&#228;lt&#228;. Vatsan v&#228;&#228;ntely
-        toki hieman harmitti, mutta eip&#228; se ole oikeasti kuin vain
-        hidaste. Kyseess&#228; on paratiisisaari palmuine ja
-        drinkkikojuineen. Valkoista hiekkaa, meren aaltoja ja
-        lomailijoita. Mieleeni tuli aivan liikaa Viettelemysten saari
-        (The Temptation Island) ohjelmasarja. Kun alkoin tarkemmin
-        miettim&#228;&#228;n niin sit&#228;h&#228;n se oli toki
-        yhdell&#228; erolla t&#228;ll&#228; saarella kaikki eiv&#228;t
-        olleet hyv&#228; n&#228;k&#246;isi&#228;, kuten en
-        min&#228;k&#228;&#228;n. Illalla tulivatkin sitten
-        &#246;kki&#228;set puremaan ja nyt ei auta muuta kuin odotella
-        onko minulla denque kuume vai malaria.</p>
-
-        <p>Takaisin Bangkokiin. Pari p&#228;iv&#228;&#228; vatsakipua
-        joista j&#228;lkimm&#228;inen nestepaastoa. Bangkokin parasta
-        antia on muuten televisiosta tulevat X-Games ohjelmat, joissa on
-        rullalautailua, -luistelua, polkupy&#246;r&#228;temppuja yms.
-        Suosittelen my&#246;s Outdoors Games ohjelmaa, miss&#228;
-        kilpaillaan tolpaan kiipe&#228;misess&#228;,
-        moottorisahaamisessa, kalliokiipeilyss&#228;, jousiammunnassa ja
-        virvel&#246;inniss&#228;. Mik&#228;li Bangkokissa haluaa itse
-        tehd&#228; jotain niin rillukkapeli, miss&#228; pit&#228;&#228;
-        saada omia nappeja pystyy, suoraan tai viistottain nelj&#228;
-        per&#228;kk&#228;in on parasta hupia.</p>
-
-        <p>Vaan eip&#228; tuossa saasteiden kaupungissa kauan viitsi
-        olla, Katchanaburi oli seuraava suunta. T&#228;m&#228;n
-        Bangkokista hieman l&#228;hteen olevan kaupungin maisemat on
-        komeat. Harmi, ett&#228; t&#228;m&#228;n alueen l&#228;himaastoon
-        ei kerennyt hirmuisesti tutustua kun loma olikin jo lopuilllaan,
-        mutta tulipa silti n&#228;hty&#228; Kwai-joki ja kaksi eri siltaa
-        sen yli. Se silta mist&#228; on tehty elokuva n&#228;kyi turist
-        officesessa pienoismallina, joten n&#228;in my&#246;s sen.</p>
-
-        <p>Emp&#228; suosittele thaimaata kenellekk&#228;&#228;n.
-        Kyseess&#228; on liian kuuma paikka minne pit&#228;&#228;
-        lent&#228;&#228; turkaisen kauan. Thaimaassa on eritt&#228;in
-        paha kommunikaatio-ongelma eik&#228; paikallisten kanssa voi
-        oikein puhua mist&#228;&#228;n. Julkisten kulkuneuvojen kuten
-        bussien ja taksien hinnat on kohdallaan ja asiakkaisen
-        palvelualttius on aivan tolkutonta. Thaimaan kaksinaismoralismi
-        my&#246;s kummastuttaa ja h&#228;mm&#228;stytt&#228;&#228;.
-        Televisio-ohjelmista on leikattu kirosanat pois ja kaikki
-        paljaspinta sek&#228; v&#228;kivalta. My&#246;sk&#228;&#228;n
-        lehtikioskessa ei ole mink&#228;&#228;n n&#228;k&#246;isi&#228;
-        pyllylehti&#228;, mutta prostituutio ja strippiklubit rehottaa
-        t&#228;ysin villin&#228;. Tolkutonta sanon min&#228;.</p>
-
-        <p>Thaimaa on hyv&#228; paikka ostaa suitsukkeita. Kuuden noin
-        500-1000 suitsuketta sis&#228;lt&#228;v&#228;n p&#246;tkyl&#228;n
-        hinta on yhteens&#228; 5 euroa. Sikarit ovat kuitenkin
-        t&#228;ss&#228; maassa yht&#228; kalliita kuin suomessa. Kaljan
-        hinta on halpaa tai kallista paikasta riippuen, toki laatu on
-        aina melko surkeaa. Thaimaan kaljoista parasta on Singha beer,
-        joka muistuttaa karhua mutta hiilihapon m&#228;&#228;r&#228; on
-        noin nelin kertainen.</p>
-
-        <p>Sy&#246;minen on t&#228;ss&#228; maassa ongelmallista. Ruoka
-        on melko ok, mutta se tekee sairaaksi. Parhaiden Thaimaalaisten
-        ravintoloiden katolla muuten lukee joko &quot;Indian
-        restaurant&quot; tai &quot;Pizza Company&quot;. Siihen kannattaa
-        my&#246;s varautua, ett&#228; kahvi on t&#228;ss&#228; maassa
-        kitker&#228;&#228;, mutta tehotonta. Kofeiini&#228; ei vain
-        yksinkertaisesti ole riitt&#228;v&#228;sti siin&#228; mustassa
-        vedess&#228; jota he tarjoilevat.</p>
-
-        <p>Yll&#228;olevista thaimaan kokemuksista on tehty paikan
-        p&#228;&#228;ll&#228; minidiskeille nauhoituksia josta koostetaan
-        noin tunnin mittainen pl&#228;j&#228;ys. Kun matkakuunnelma on
-        valmis niin saatampa kertoa mist&#228; saa mp3:sia.</p>
-
-        <p>-- 
-        <br />
-
-        Sami Kerola 
-        <br />
-
-        http://kerolasa.iki.fi/</p>
-    </body>
+<title>Thaimaan matka</title>
+</head>
+<body>
+<p>---------- Forwarded message ----------<br>
+Date: Mon, 16 Sep 2002 14:52:22 +0300 (EEST)<br>
+From: Sami Kerola &lt;sami.kerola@sonera.com&gt;<br>
+Subject: loma</p>
+<p>Moro</p>
+<p>Vältääkseni vastailemasta samoihin kysymyksiin uudestaan ja uudestaan
+tässäpä hiemainen tiivistelmä siitä mitenkö lomani meni.</p>
+<p>Haista Bangkok. Se on muuten sitten rumasti sanottu, kyseisessä kaupungissa
+on noin muutama miljoona moottorikulkuneuvoa eivätkä paikalliset ole kuuleet
+puhuttavan katalysaattorista. Eipä silti kadunvarsilla kalaapaistavat
+katukeittiöihmiset on vielä turkasen paljon törkeämmän hajuinen juttu kuin nuo
+silmiä ja kehkoja kirvelevät pörisyttelijät. Bangkokissa on toki hyviäkin
+puolia, kuten ilmastointi kaikkialla. Tuo hyvä puoli kuitenkin jää sen varjoo,
+että samaisessa kaupungissa tuk tuk kuskit ja massage massage, come for massage
+-ihmiset tyrkyttävät palveluja täysin väkisin.</p>
+<p>Bangkokista piti päästä pois ja suuntasin kohti rannikkoa Pattajalle. Mikäli
+olet 40-50 englantilainen tai saksalainen mies ilman naisseuraa tämä on juuri
+oikea lomakohde sinulle. Minä löysin tästä kaupungista lähinnä lava-autoja
+joiden tarkoitus oli huijata rahaa turisteilta sekä palvelua joka ei tajua
+englannin kielestä mitään muuta kuin maksamiseen liittyvät sanat.</p>
+<p>Pattaja on kama, siispä Rayongiin. Tässä kaupungissa ei ole hotelleja. Tai
+näin voi päätellä ainakin sillä perusteella, että paikallinen lava-autokuski
+ajoi minut noin 25 kilometrin päähän paikkaan jossa oli maaseutulomakohde.
+Kanoja ja kukkoja, melkoinen viidakkokokemus kerrassaan. Rayong on muuten siitä
+haasteellinen kaupunki, että siellä ei ole kuin muutama ravintola eikä
+ilmeisesti yhtään ihmistä joka osaisi puhua englantia siedettävästi.</p>
+<p>Maaseudun holiday resourt oli kyllä kiva. Olkoonkin, että viereiseltä tieltä
+kulki maansiirto rekkoja. Paikallisen tavan mukaisesti rekoilla ei tietystikään
+ole äänen vaimentimia. Tämä muistuitti kovasti Pattajan hotellia minkä vieressä
+oli rakennustyömaa. Taitavat nämä Thaimaalaiset rakastaa turistien häiriköintiä
+yöaikaan, tai niin ainakin minä luulen. Maaseutu idyllistä oli sellainen etu,
+että ruokaileminen oli halpaa. Tietty haitta puolena tuli noin 10 päivää
+kestävä ripuli.</p>
+<p>Seuraavana päivänä Koh Sametin saarelle. Aluksi näytti tosi hyvältä. Vatsan
+vääntely toki hieman harmitti, mutta eipä se ole oikeasti kuin vain hidaste.
+Kyseessä on paratiisisaari palmuine ja drinkkikojuineen. Valkoista hiekkaa,
+meren aaltoja ja lomailijoita. Mieleeni tuli aivan liikaa Viettelemysten saari
+(The Temptation Island) ohjelmasarja. Kun alkoin tarkemmin miettimään niin
+sitähän se oli toki yhdellä erolla tällä saarella kaikki eivät olleet hyvä
+näköisiä, kuten en minäkään. Illalla tulivatkin sitten ökkiäset puremaan ja nyt
+ei auta muuta kuin odotella onko minulla denque kuume vai malaria.</p>
+<p>Takaisin Bangkokiin. Pari päivää vatsakipua joista jälkimmäinen
+nestepaastoa. Bangkokin parasta antia on muuten televisiosta tulevat X-Games
+ohjelmat, joissa on rullalautailua, -luistelua, polkupyörätemppuja yms.
+Suosittelen myös Outdoors Games ohjelmaa, missä kilpaillaan tolpaan
+kiipeämisessä, moottorisahaamisessa, kalliokiipeilyssä, jousiammunnassa ja
+virvelöinnissä. Mikäli Bangkokissa haluaa itse tehdä jotain niin rillukkapeli,
+missä pitää saada omia nappeja pystyy, suoraan tai viistottain neljä peräkkäin
+on parasta hupia.</p>
+<p>Vaan eipä tuossa saasteiden kaupungissa kauan viitsi olla, Katchanaburi oli
+seuraava suunta. Tämän Bangkokista hieman lähteen olevan kaupungin maisemat on
+komeat. Harmi, että tämän alueen lähimaastoon ei kerennyt hirmuisesti tutustua
+kun loma olikin jo lopuilllaan, mutta tulipa silti nähtyä Kwai-joki ja kaksi
+eri siltaa sen yli. Se silta mistä on tehty elokuva näkyi turist officesessa
+pienoismallina, joten näin myös sen.</p>
+<p>Empä suosittele thaimaata kenellekkään. Kyseessä on liian kuuma paikka minne
+pitää lentää turkaisen kauan. Thaimaassa on erittäin paha kommunikaatio-ongelma
+eikä paikallisten kanssa voi oikein puhua mistään. Julkisten kulkuneuvojen
+kuten bussien ja taksien hinnat on kohdallaan ja asiakkaisen palvelualttius on
+aivan tolkutonta. Thaimaan kaksinaismoralismi myös kummastuttaa ja
+hämmästyttää. Televisio-ohjelmista on leikattu kirosanat pois ja kaikki
+paljaspinta sekä väkivalta. Myöskään lehtikioskessa ei ole minkään näköisiä
+pyllylehtiä, mutta prostituutio ja strippiklubit rehottaa täysin villinä.
+Tolkutonta sanon minä.</p>
+<p>Thaimaa on hyvä paikka ostaa suitsukkeita. Kuuden noin 500-1000 suitsuketta
+sisältävän pötkylän hinta on yhteensä 5 euroa. Sikarit ovat kuitenkin tässä
+maassa yhtä kalliita kuin suomessa. Kaljan hinta on halpaa tai kallista
+paikasta riippuen, toki laatu on aina melko surkeaa. Thaimaan kaljoista parasta
+on Singha beer, joka muistuttaa karhua mutta hiilihapon määrä on noin nelin
+kertainen.</p>
+<p>Syöminen on tässä maassa ongelmallista. Ruoka on melko ok, mutta se tekee
+sairaaksi. Parhaiden Thaimaalaisten ravintoloiden katolla muuten lukee joko
+"Indian restaurant" tai "Pizza Company". Siihen kannattaa myös varautua, että
+kahvi on tässä maassa kitkerää, mutta tehotonta. Kofeiiniä ei vain
+yksinkertaisesti ole riittävästi siinä mustassa vedessä jota he
+tarjoilevat.</p>
+<p>Ylläolevista thaimaan kokemuksista on tehty paikan päällä minidiskeille
+nauhoituksia josta koostetaan noin tunnin mittainen pläjäys. Kun matkakuunnelma
+on valmis niin saatampa kertoa mistä saa mp3:sia.</p>
+<p>--<br>
+Sami Kerola<br>
+https://kerolasa.iki.fi/</p>
+</body>
 </html>
-
