--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns=http://www.w3.org/1999/xhtml>
+<html lang="en">
 <head>
 <style>A{background:0 0;text-decoration:none}BODY{font-size:16px}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
 <meta content="text/html; charset=utf-8" http-equiv=Content-Type>
@@ -21,7 +21,7 @@
 <span itemprop=name>Cloudflare Ltd</span><br>
 Sami Kerola<br>
 <span itemprop=address itemscope itemtype=http://schema.org/PostalAddress>
-<span itemprop=streetAddress>The Riverside Building, <td class=d><a href=https://what3words.com/moves.surely.life itemprop=url>County Hall</a></span>, 6th floor<br>
+<span itemprop=streetAddress>The Riverside Building, <a href=https://what3words.com/moves.surely.life itemprop=url>County Hall</a></span>, 6th floor<br>
 <span itemprop=addressLocality>London</span><br>
 <span itemprop=postalCode>SE1 7PB</span><br>
 <span itemprop=addressCountry>United Kingdom</span></span></span></p>
@@ -58,19 +58,19 @@ Sami Kerola<br>
 </tr>
 </table>
 </div>
-<meta itemprop=birthDate content=1977-04-28 />
-<meta itemprop=gender content=male />
-<meta itemprop=image content="https://kerolasa.iki.fi/me_london.jpg"/>
-<meta itemprop=sameas content="https://en.gravatar.com/kerolasa"/>
-<meta itemprop=sameas content="https://github.com/kerolasa/"/>
-<meta itemprop=sameas content="https://savannah.gnu.org/users/kerolasa"/>
-<meta itemprop=sameas content="https://sourceforge.net/u/kerolasa/profile/"/>
-<meta itemprop=sameas content="https://stackoverflow.com/users/796585/sami-kerola"/>
-<meta itemprop=sameas content="https://www.linkedin.com/in/kerolasa/"/>
-<meta itemprop=sameas content="https://www.openhub.net/accounts/kerolasa"/>
-<meta itemprop=sameas content="https://www.ratebeer.com/user/110452/"/>
-<meta itemprop=sameas content="https://www.instagram.com/kerolasa/"/>
-<meta itemprop=sameas content="https://twitter.com/kerolasa"/>
+<span itemprop=birthDate content=1977-04-28></span>
+<span itemprop=gender content=male></span>
+<span itemprop=image content="https://kerolasa.iki.fi/me_london.jpg"></span>
+<span itemprop=sameas content="https://en.gravatar.com/kerolasa"></span>
+<span itemprop=sameas content="https://github.com/kerolasa/"></span>
+<span itemprop=sameas content="https://savannah.gnu.org/users/kerolasa"></span>
+<span itemprop=sameas content="https://sourceforge.net/u/kerolasa/profile/"></span>
+<span itemprop=sameas content="https://stackoverflow.com/users/796585/sami-kerola"></span>
+<span itemprop=sameas content="https://www.linkedin.com/in/kerolasa/"></span>
+<span itemprop=sameas content="https://www.openhub.net/accounts/kerolasa"></span>
+<span itemprop=sameas content="https://www.ratebeer.com/user/110452/"></span>
+<span itemprop=sameas content="https://www.instagram.com/kerolasa/"></span>
+<span itemprop=sameas content="https://twitter.com/kerolasa"></span>
 </section>
 <p><a href=second.html>Second page.</a></p>
 </body>
