--- a/travelchecklist.html
+++ b/travelchecklist.html
@@ -17,6 +17,7 @@
 <meta name="rating" content="general" />
 <meta name="revisit-after" content="15" />
 <meta name="robots" content="index, follow" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <link type="text/css" rel="stylesheet" href="kerolasa.css" />
 <title>Before travel items checklist</title>
 </head>
